# astrbot_plugin_text-renderer

./: .flake8  .gitignore  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml
.github/workflows/: python-ci.yml
config/: constants.py
utils/: image_utils.py
