[project]
name = "astrbot_plugin_snap_translator"
version = "1.1.4"

# pyproject.toml
# 用于集中管理 Python 项目的配置，例如依赖、构建工具和代码质量工具的设置。

[tool.black]
# Black: 不妥协的代码格式化工具
# line-length: 设置每行的最大字符数。
line-length = 120

[tool.flake8]
# Flake8: 代码风格和逻辑检查工具
# max-line-length: 与 black 保持一致，确保格式化和检查规则不冲突。
max-line-length = 120
# exclude: 指定要忽略检查的目录。
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "env"
]
# ignore: 忽略与 black 冲突的规则。
# E203: whitespace before ':' (切片中冒号前的空格)
# W503: line break before binary operator (在二元运算符之前换行)
ignore = ["E203", "W503"]